# smallest-python-sdk

./: .fernignore  .gitignore  LICENSE  MIGRATION.md  Makefile  README.md  RELEASE.md  changelog.md  pyproject.toml  reference.md  requirements.txt  setup.py  test.ipynb  test.py
.fern/: metadata.json  replay.yml
.github/workflows/: ci.yml  python-package.yml  release.yml  test-package.yml
docs/: AgentDTOSynthesizerVoiceConfig.md  AgentTemplatesApi.md  AgentsApi.md  ApiResponse.md  CallsApi.md  CampaignsApi.md  CreateAgentRequest.md  CreateAgentRequestLanguage.md  CreateAgentRequestLanguageSynthesizerVoiceConfig.md  CreateCampaign200ResponseInner.md  DeleteAgent200Response.md  GetAgentById200Response.md  GetConversation200ResponseData.md  GetCurrentUser200Response.md  GetCurrentUser200ResponseData.md  GetOrganization200ResponseDataMembersInner.md  OrganizationApi.md  StartOutboundCall200ResponseData.md  StartOutboundCallRequest.md  UnauthorizedErrorReponse.md  UpdateAgent200Response.md  UpdateAgentRequest.md  UpdateAgentRequestSynthesizer.md  UploadTextToKnowledgeBaseRequest.md  UserApi.md
docs/atoms/: AgentDTO.md  AgentDTOLanguage.md  AgentDTOSynthesizer.md  AgentDTOSynthesizerVoiceConfig.md  AgentTemplatesApi.md  AgentsApi.md  Api.md  ApiResponse.md  BadRequestErrorResponse.md  CallsApi.md  CampaignsApi.md  CreateAgentFromTemplate200Response.md  CreateAgentFromTemplateRequest.md  CreateAgentRequestLanguage.md  CreateAgentRequestLanguageSynthesizer.md  CreateAgentRequestLanguageSynthesizerVoiceConfig.md  CreateCampaign200ResponseData.md  CreateCampaign201Response.md  CreateCampaign201ResponseData.md  CreateCampaignRequest.md  CreateKnowledgeBase201Response.md  CreateKnowledgeBaseRequest.md  DeleteAgent200Response.md  GetAgentById200Response.md  GetAgentTemplates200Response.md  GetAgentTemplates200ResponseDataInner.md  GetAgents200Response.md  GetAgents200ResponseData.md  GetCampaignById200Response.md  GetCampaignById200ResponseData.md  GetCampaigns200Response.md  GetCampaigns200ResponseDataInner.md  GetCampaigns200ResponseDataInnerAgent.md  GetCampaignsRequest.md  GetConversation200Response.md  GetConversation200ResponseData.md  GetConversationLogs200ResponseData.md  GetCurrentUser200ResponseData.md  GetKnowledgeBaseById200Response.md  GetKnowledgeBases200Response.md  (+17 more)
docs/atoms/models/: AgentAgentIdWebhookSubscriptionsDelete200Response.md  AgentAgentIdWebhookSubscriptionsGet200Response.md  AgentAgentIdWebhookSubscriptionsGet404Response.md  AgentAgentIdWebhookSubscriptionsPost201Response.md  (+162 more)
examples/: build_voice_agent.py  quickstart.py
examples/tool_calling-1/: README.md  assistant_agent.py  pyproject.toml  server.py
sample_scripts/: atoms-script.py
scripts/: verify.py
smallest/: __init__.py  async_tts.py  exceptions.py  models.py  stream_tts.py  tts.py  utils.py
smallest_ai/: __init__.py  asynctts.py  features.md  models.py  tts.py  utils.py
smallestai/: __init__.py
smallestai/atoms/: __init__.py  api_client.py  atoms_client.py  audience.py  call.py  campaign.py  configuration.py  exceptions.py  kb.py
smallestai/atoms-2/: __init__.py
smallestai/atoms2/: __init__.py  api_client.py  atoms_client.py  configuration.py  rest.py
smallestai/cli/: agent.py  auth.py  main.py  utils.py
smallestai/waves/: __init__.py  async_tts.py  async_waves_client.py  exceptions.py  models.py  stream_tts.py  tts.py  utils.py  waves_client.py
src/smallestai/: __init__.py  _default_clients.py  client.py  environment.py  version.py
tests/: async.py  atoms-script.py  conftest.py  example-script.py  sync.py  test_aiohttp_autodetect.py  test_async.py  test_sync.py  test_utils.py  utils.py
tests/atoms/: audience_template.csv  conftest.py  test_agent_dto.py  test_agent_dto_language.py  test_agent_dto_synthesizer.py  test_agent_dto_synthesizer_voice_config.py  test_agent_templates_api.py  test_agents_api.py  test_api_response.py  test_bad_request_error_response.py  test_calls_api.py  test_campaigns_api.py  test_create_agent_from_template200_response.py  test_create_agent_from_template_request.py  test_create_agent_request.py  test_create_agent_request_language.py  test_create_agent_request_language_synthesizer.py  test_create_agent_request_language_synthesizer_voice_config.py  test_create_campaign200_response_inner.py  test_create_campaign_request.py  test_create_knowledge_base201_response.py  test_create_knowledge_base_request.py  test_delete_agent200_response.py  test_get_agent_by_id200_response.py  test_get_agent_templates200_response.py  test_get_agent_templates200_response_data_inner.py  test_get_agents200_response.py  test_get_agents200_response_data.py  test_get_campaign_by_id200_response.py  test_get_campaigns200_response.py  test_get_campaigns200_response_data_inner.py  test_get_campaigns_request.py  test_get_conversation200_response.py  test_get_conversation200_response_data.py  test_get_current_user200_response.py  test_get_current_user200_response_data.py  test_get_knowledge_base_by_id200_response.py  test_get_knowledge_base_by_id200_response_data.py  test_get_organization200_response.py  test_get_organization200_response_data.py  (+19 more)
tests/custom/: test_as_page_envelope.py  test_helpers_rest.py  test_pulse_rest_format_params.py  test_sdk_fixes.py  test_waves_shim_import.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
tests/velocity/: _env.py  field_drop_audit.py  integration.py  smoke.py  triage.py
tests/waves/: test_async.py  test_streaming_ws.py  test_sync.py  test_utils.py
tests/wire/: conftest.py  test_atoms_agentTemplates.py  test_atoms_agentVersioningDrafts.py  test_atoms_agentVersioningVersions.py  test_atoms_agents.py  test_atoms_audience.py  test_atoms_calls.py  test_atoms_campaigns.py  test_atoms_compliance.py  test_atoms_conversations.py  test_atoms_dnc.py  test_atoms_knowledgeBase.py  test_atoms_liveTranscripts.py  test_atoms_logs.py  test_atoms_organization.py  test_atoms_phoneNumbers.py  test_atoms_promptScoring.py  test_atoms_user.py  test_atoms_webhooks.py  test_waves.py
wiremock/: wiremock-mappings.json
(+958 files in other folders)
