[project]
name = "smallestai"
version = "3.1.0"
description = "Official Python client for the Smallest AI API"
authors = [
    {name = "Smallest", email = "support@smallest.ai"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["smallest", "smallest.ai", "tts", "text-to-speech", "waves", "atoms"]
dependencies = [
    "aiohttp",
    "aiofiles",
    "requests",
    "pydub",
    "urllib3 >= 1.25.3, < 3.0.0",
    "python-dateutil >= 2.8.2",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
    "audioop-lts; python_version >= '3.13'"
]

[project.optional-dependencies]
test = [
    "jiwer",
    "httpx",
    "pytest >= 7.2.1",
    "pytest-asyncio",
    "deepgram-sdk",
    "python-dotenv",
    "pytest-cov >= 2.8.1",
    "tox >= 3.9.0",
    "flake8 >= 4.0.0",
    "types-python-dateutil >= 2.8.19.14",
    "mypy >= 1.5"
]

[project.urls]
Homepage = "https://github.com/smallest-inc/smallest-python-sdk"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["smallest*"]
